@@ -91,25 +91,14 @@ public class LuceneSearchEngine implements SearchEngine {
 	 *  to the current topic.
 	 */
 	public void addToIndex(Topic topic, List<String> links) {
-		String virtualWiki = topic.getVirtualWiki();
-		String topicName = topic.getName();
-		IndexWriter writer = null;
 		try {
-			FSDirectory directory = FSDirectory.open(getSearchIndexPath(virtualWiki));
+			long start = System.currentTimeMillis();
+			IndexWriter writer = null;
+			FSDirectory directory = FSDirectory.open(getSearchIndexPath(topic.getVirtualWiki()));
 			try {
-				writer = new IndexWriter(directory, new StandardAnalyzer(USE_LUCENE_VERSION), false, IndexWriter.MaxFieldLength.LIMITED);
-				KeywordAnalyzer keywordAnalyzer = new KeywordAnalyzer();
-				writer.optimize();
-				Document standardDocument = createStandardDocument(topic);
-				writer.addDocument(standardDocument);
-				Document keywordDocument = createKeywordDocument(topic, links);
-				writer.addDocument(keywordDocument, keywordAnalyzer);
+				writer = this.retrieveIndexWriter(directory, false);
+				this.addToIndex(writer, topic, links);
 			} finally {
-				try {
-					if (writer != null) {
-						writer.optimize();
-					}
-				} catch (Exception e) {}
 				try {
 					if (writer != null) {
 						writer.close();
@@ -117,9 +106,25 @@ public class LuceneSearchEngine implements SearchEngine {
 				} catch (Exception e) {}
 			}
 			directory.close();
+			logger.fine("Add to search index for topic " + topic.getName() + " in " + ((System.currentTimeMillis() - start) / 1000.000) + " s.");
 		} catch (Exception e) {
-			logger.severe("Exception while adding topic " + topicName, e);
+			logger.severe("Exception while adding topic " + topic.getName(), e);
 		}
+	}
+
+	/**
+	 * Add a topic to the search index.
+	 *
+	 * @param topic The Topic object that is to be added to the index.
+	 * @param links A list containing the topic names for all topics that link
+	 *  to the current topic.
+	 */
+	private void addToIndex(IndexWriter writer, Topic topic, List<String> links) throws IOException {
+		KeywordAnalyzer keywordAnalyzer = new KeywordAnalyzer();
+		Document standardDocument = createStandardDocument(topic);
+		writer.addDocument(standardDocument);
+		Document keywordDocument = createKeywordDocument(topic, links);
+		writer.addDocument(keywordDocument, keywordAnalyzer);
 	}
 
 	/**
@@ -169,15 +174,14 @@ public class LuceneSearchEngine implements SearchEngine {
 	 * @param topic The topic object that is to be removed from the index.
 	 */
 	public void deleteFromIndex(Topic topic) {
-		String virtualWiki = topic.getVirtualWiki();
-		String topicName = topic.getName();
-		IndexWriter writer = null;
 		try {
-			FSDirectory directory = FSDirectory.open(getSearchIndexPath(virtualWiki));
+			long start = System.currentTimeMillis();
+			IndexWriter writer = null;
+			FSDirectory directory = FSDirectory.open(getSearchIndexPath(topic.getVirtualWiki()));
 			// delete the current document
 			try {
-				writer = new IndexWriter(directory, new StandardAnalyzer(USE_LUCENE_VERSION), false, IndexWriter.MaxFieldLength.LIMITED);
-				writer.deleteDocuments(new Term(ITYPE_TOPIC_PLAIN, topicName));
+				writer = this.retrieveIndexWriter(directory, false);
+				this.deleteFromIndex(writer, topic);
 			} finally {
 				if (writer != null) {
 					try {
@@ -186,9 +190,19 @@ public class LuceneSearchEngine implements SearchEngine {
 				}
 			}
 			directory.close();
+			logger.fine("Delete from search index for topic " + topic.getName() + " in " + ((System.currentTimeMillis() - start) / 1000.000) + " s.");
 		} catch (Exception e) {
-			logger.severe("Exception while adding topic " + topicName, e);
+			logger.severe("Exception while adding topic " + topic.getName(), e);
 		}
+	}
+
+	/**
+	 * Remove a topic from the search index.
+	 *
+	 * @param topic The topic object that is to be removed from the index.
+	 */
+	private void deleteFromIndex(IndexWriter writer, Topic topic) throws IOException {
+		writer.deleteDocuments(new Term(ITYPE_TOPIC_PLAIN, topic.getName()));
 	}
 
 	/**
@@ -304,7 +318,7 @@ public class LuceneSearchEngine implements SearchEngine {
 			try {
 				// create the search instance
 				FSDirectory directory = FSDirectory.open(getSearchIndexPath(virtualWiki));
-				writer = new IndexWriter(directory, new StandardAnalyzer(USE_LUCENE_VERSION), true, IndexWriter.MaxFieldLength.LIMITED);
+				writer = this.retrieveIndexWriter(directory, true);
 				directory.close();
 			} catch (Exception e) {
 				logger.severe("Unable to create search instance " + child.getPath(), e);
@@ -336,7 +350,7 @@ public class LuceneSearchEngine implements SearchEngine {
 			KeywordAnalyzer keywordAnalyzer = new KeywordAnalyzer();
 			IndexWriter writer = null;
 			try {
-				writer = new IndexWriter(directory, new StandardAnalyzer(USE_LUCENE_VERSION), true, IndexWriter.MaxFieldLength.LIMITED);
+				writer = this.retrieveIndexWriter(directory, true);
 				List<String> topicNames = WikiBase.getDataHandler().getAllTopicNames(virtualWiki.getName());
 				for (String topicName : topicNames) {
 					topic = WikiBase.getDataHandler().lookupTopic(virtualWiki.getName(), topicName, false, null);
@@ -375,6 +389,13 @@ public class LuceneSearchEngine implements SearchEngine {
 	/**
 	 *
 	 */
+	private synchronized IndexWriter retrieveIndexWriter(FSDirectory directory, boolean create) throws IOException {
+		return new IndexWriter(directory, new StandardAnalyzer(USE_LUCENE_VERSION), create, IndexWriter.MaxFieldLength.LIMITED);
+	}
+
+	/**
+	 *
+	 */
 	private String retrieveResultSummary(Document document, Highlighter highlighter, StandardAnalyzer analyzer) throws InvalidTokenOffsetsException, IOException {
 		String content = document.get(ITYPE_CONTENT_PLAIN);
 		TokenStream tokenStream = analyzer.tokenStream(ITYPE_CONTENT_PLAIN, new StringReader(content));
@@ -386,5 +407,31 @@ public class LuceneSearchEngine implements SearchEngine {
 			}
 		}
 		return summary;
+	}
+
+	/**
+	 *
+	 */
+	public void updateInIndex(Topic topic, List<String> links) {
+		try {
+			long start = System.currentTimeMillis();
+			IndexWriter writer = null;
+			FSDirectory directory = FSDirectory.open(getSearchIndexPath(topic.getVirtualWiki()));
+			try {
+				writer = this.retrieveIndexWriter(directory, false);
+				this.deleteFromIndex(writer, topic);
+				this.addToIndex(writer, topic, links);
+			} finally {
+				try {
+					if (writer != null) {
+						writer.close();
+					}
+				} catch (Exception e) {}
+			}
+			directory.close();
+			logger.fine("Update search index for topic " + topic.getName() + " in " + ((System.currentTimeMillis() - start) / 1000.000) + " s.");
+		} catch (Exception e) {
+			logger.severe("Exception while updating topic " + topic.getName(), e);
+		}
 	}
 }
